新增 AI 房间分析功能、自动化延迟时间配置、优化 LCU 连接监控